--- a/private/app/config/parameters.yml.dist
+++ b/private/app/config/parameters.yml.dist
@@ -4,14 +4,16 @@
 parameters:
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     symfony
+    database_name:     holluxfr
     database_user:     root
     database_password: ~
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
     mailer_transport:  smtp
+    mailer_auth_mode:  login
     mailer_host:       127.0.0.1
+    mailer_port:       ~
     mailer_user:       ~
     mailer_password:   ~
 
