--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,4 +1,4 @@
-DirectoryIndex app.php
+DirectoryIndex app.php index.html
 
 <IfModule mod_headers.c>
     # compress javascript, css:
@@ -69,6 +69,7 @@ DirectoryIndex app.php
 
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.hollux.fr/$1 [R,L]
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
