--- a/www/.htaccess
+++ b/www/.htaccess
@@ -68,8 +68,8 @@ DirectoryIndex app.php index.html
 </Files>
 
 RewriteEngine On
-RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.hollux.fr/$1 [R,L]
+# RewriteCond %{SERVER_PORT} 80
+# RewriteRule ^(.*)$ https://www.hollux.fr/$1 [R,L]
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
